--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
     "connect-flash": "^0.1.1",
+    "connect-mongoose": "0.0.2",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^5.0.3",
     "hbs": "~4.0.1",
     "mongoose": "^5.0.9",
     "morgan": "~1.9.0",
