--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.18.2",
+    "connect": "^3.6.6",
     "connect-flash": "^0.1.1",
-    "connect-mongoose": "0.0.2",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
     "debug": "~2.6.9",
